[gd_scene load_steps=6 format=3 uid="uid://bxq5bvkrtriqq"]

[ext_resource type="Script" path="res://scenes/ui/scripts/setup.gd" id="1_uo7aa"]
[ext_resource type="PackedScene" uid="uid://qfr61hbrdi4f" path="res://scenes/ui/loading/loading.tscn" id="2_fdv7y"]
[ext_resource type="Texture2D" uid="uid://b27dgqubv3k4k" path="res://shared/third_party/twitch/twitch-brand-assets/Brand Assets/Logos/glitch/Purple/TwitchGlitchPurple.svg" id="2_noe4a"]

[sub_resource type="Gradient" id="Gradient_e174d"]
offsets = PackedFloat32Array(0, 0.986486)
colors = PackedColorArray(0.128906, 0.128906, 0.128906, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5k38w"]
gradient = SubResource("Gradient_e174d")
width = 1280
height = 720
fill_to = Vector2(1, 1)
metadata/_snap_enabled = true

[node name="Setup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_uo7aa")

[node name="Background" type="TextureRect" parent="." groups=["Background"]]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_5k38w")
expand_mode = 3
stretch_mode = 5

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="LogoPadding" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 16

[node name="LogoResizer" type="Control" parent="CenterContainer/VBoxContainer/LogoPadding"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="TwitchLogo" type="TextureRect" parent="CenterContainer/VBoxContainer/LogoPadding/LogoResizer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_noe4a")
expand_mode = 3
stretch_mode = 5

[node name="Description" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Twitch Developer integration needs to be setup before continuing.

"

[node name="ClientIdLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "client_id"

[node name="ClientIdError" type="Label" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.490196, 0.490196, 1)
theme_override_font_sizes/font_size = 20
text = " "

[node name="ClientIdHeader" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ClientIdEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/ClientIdHeader"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
secret = true

[node name="ShowClientId" type="Button" parent="CenterContainer/VBoxContainer/ClientIdHeader"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Show"

[node name="MarginContainer2" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/margin_top = 16

[node name="ClientSecretLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "client_secret"

[node name="ClientSecretError" type="Label" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.490196, 0.490196, 1)
theme_override_font_sizes/font_size = 20
text = " "

[node name="ClientSecretHeader" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ClientSecretEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/ClientSecretHeader"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
secret = true

[node name="ShowClientSecret" type="Button" parent="CenterContainer/VBoxContainer/ClientSecretHeader"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Show"

[node name="ClientCredentialsValidationError" type="Label" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.490196, 0.490196, 1)
theme_override_font_sizes/font_size = 20
text = " "

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 16

[node name="SubmissionButtons" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonSave" type="Button" parent="CenterContainer/VBoxContainer/SubmissionButtons"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Save"

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer/SubmissionButtons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonCancel" type="Button" parent="CenterContainer/VBoxContainer/SubmissionButtons"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Cancel"

[node name="LoadingModalContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoadingModal" parent="LoadingModalContainer" instance=ExtResource("2_fdv7y")]
unique_name_in_owner = true
layout_mode = 2
is_modal = true

[connection signal="text_changed" from="CenterContainer/VBoxContainer/ClientIdHeader/ClientIdEdit" to="." method="_on_client_id_edit_text_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ClientIdHeader/ShowClientId" to="." method="_on_show_client_id_pressed"]
[connection signal="text_changed" from="CenterContainer/VBoxContainer/ClientSecretHeader/ClientSecretEdit" to="." method="_on_client_secret_edit_text_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ClientSecretHeader/ShowClientSecret" to="." method="_on_show_client_secret_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SubmissionButtons/ButtonSave" to="." method="_on_button_save_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SubmissionButtons/ButtonCancel" to="." method="_on_button_cancel_pressed"]
